Fix padding and elements overlapping

--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,7 @@ body {
 .chat-container {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--chat-bg);
     margin: 0;
     padding: 0;
@@ -28,14 +28,14 @@ body {
     right: auto;
     margin: 0 auto;
     width: 50%;
-    padding: 10px;
+    height: 100%;
+    padding: 10px 0 70px 0;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
 }
 
 .message {
-    margin: 5px 0;
     padding: 10px;
     border-radius: 10px;
     max-width: 70%;
@@ -54,10 +54,21 @@ body {
 }
 
 .chat-input {
-    display: flex;
+    position: fixed;
+    bottom: 0;
     padding: 10px;
+    width: 100%;
+    height: auto;
     background-color: #ffffff;
     border-top: 1px solid #ddd;
+    box-sizing: border-box;
+}
+
+.chat-input form {
+    box-sizing: border-box;
+    display: flex;
+    width: 100%;
+    gap: 1rem;
 }
 
 .chat-input input[type=text] {
@@ -66,18 +77,20 @@ body {
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    font-size: 16px;
+
+    font-size: 1rem;
+    display: inline-block;
 }
 
 .chat-input input[type=submit] {
-    margin-left: 10px;
-    padding: 10px 20px;
+    flex: 0 0 auto;
     background-color: #0058b9;
+    width: 7rem;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    display: inline-block;
 }
 
 .chat-input button:hover {
